# desktopbg

./: Cargo.toml  README.md
src/: bucket.rs  display.rs  lockscreen.rs  main.rs  utils.rs  wallpaper.rs
