[package]
name = "desktopbg"
version = "0.3.0"
edition = "2021"

[dependencies]
dunce = "1.0.4"
futures = { version = "0.3.30", optional = true }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
walkdir = "2.4"
wallpaper = "3.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = ["System_UserProfile", "Foundation", "Storage"]
optional = true

[features]
lockscreen = ["dep:futures", "dep:windows"]
